--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,20 @@
 <html>
 	<head>
 		<meta charset='utf-8'>
-   	 	<meta name="viewport" content="width=device-width">
+		<meta name="viewport" content="width=device-width">
+		<link href='index.css' rel='stylesheet' type='text/css' />
+		<script src="https://d3js.org/d3.v5.min.js"></script>
+		<script src='index.js'></script>
+		<title>Final Project</title> 	
 	</head>
 	<body>
-		<script src='bundle.js' type='text/javascript'></script>
+		<h1>American Worker Composition</h1>
+		<div class='main'>
+			<!-- <p>
+				
+				<p id='pop'>a</p>
+					
+		    </p> -->
+		</div>		
 	</body>
 </html>
