--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,9 @@
 	<body>
 		<h1>American Worker Composition</h1>
 		<div class='main'>
-			<!-- <p>
-				
-				<p id='pop'>a</p>
-					
-		    </p> -->
-		</div>		
+		</div>
+		
+		<div id = "pie_chart"></div>
+		<div id = "bar_chart"></div>
 	</body>
 </html>
