--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,8 @@
 	<head>
 		<meta charset='utf-8'>
 		<meta name="viewport" content="width=device-width">
-		<link href='index.css' rel='stylesheet' type='text/css' />
-		<script src="https://d3js.org/d3.v5.min.js"></script>
-		<script src='index.js'></script>
+		
+		<script src='bundle.js'></script>
 		<title>Final Project</title> 	
 	</head>
 	<body>
