--- a/src/index.html
+++ b/src/index.html
@@ -3,16 +3,17 @@
 	<head>
 		<meta charset='utf-8'>
 		<meta name="viewport" content="width=device-width">
-		
-		<script src='bundle.js'></script>
 		<title>Final Project</title> 	
 	</head>
 	<body>
 		<h1>American Worker Composition</h1>
 		<div class='main'>
+			<div class ='nav'></div>
+			<div class = 'county-view'>	
+				<div id="pie_chart"></div>
+				<div id="bar_chart"></div> <!--be careful about these two ids-->
+			</div>
 		</div>
-		
-		<div id = "pie_chart"></div>
-		<div id = "bar_chart"></div>
+		<script src='bundle.js' type='text/javascript'></script>
 	</body>
 </html>
