--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,10 @@
 		<h1>American Worker Composition</h1>
 		<div class='main'>
 			<div class ='nav'></div>
-			<div class = 'county-view'>	
+			<div class = 'county-view'>
+			    <div id="bar_chart"></div>	
 				<div id="pie_chart"></div>
-				<div id="bar_chart"></div> <!--be careful about these two ids-->
+				 <!--be careful about these two ids-->
 			</div>
 		</div>
 		<script src='bundle.js' type='text/javascript'></script>
